force-app/main/default/objects/Order_Line_Item__c/fields/Detailview_Image_Link__c.field-meta.xml
<CustomField>
    <fullName>Detailview_Image_Link__c</fullName>
    <description>Detailview Image Link</description>
    <inlineHelpText>Detailview Image Link</inlineHelpText>
    <label>Detailview Image Link</label>
    <length>255</length>
    <type>Text</type>
</CustomField>