force-app/main/default/objects/Order_Line_Item__c/fields/Listview_Image_Link__c.field-meta.xml
<CustomField>
    <fullName>Listview_Image_Link__c</fullName>
    <description>Listview Image Link</description>
    <inlineHelpText>Listview Image Link</inlineHelpText>
    <label>Listview Image Link</label>
    <length>255</length>
    <type>Text</type>
</CustomField>