force-app/main/default/objects/Order_Line_Item__c/fields/Order_Line_Item_Price__c.field-meta.xml
<CustomField>
    <fullName>Order_Line_Item_Price__c</fullName>
    <label>Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>