force-app/main/default/objects/Order_Line_Item__c/fields/Order_Line_Item_Product_Id__c.field-meta.xml
<CustomField>
    <fullName>Order_Line_Item_Product_Id__c</fullName>
    <label>Related Product Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>