force-app/main/default/objects/Order_Line_Item__c/fields/Price_After_Order_Discount__c.field-meta.xml
<CustomField>
    <fullName>Price_After_Order_Discount__c</fullName>
    <label>Price After Order Discount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>