force-app/main/default/objects/Order_Line_Item__c/fields/Product_Id__c.field-meta.xml
<CustomField>
    <fullName>Product_Id__c</fullName>
    <description>Product Id</description>
    <inlineHelpText>Product Id</inlineHelpText>
    <label>Product Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>