force-app/main/default/objects/Order_Line_Item__c/fields/Variant_Info__c.field-meta.xml
<CustomField>
    <fullName>Variant_Info__c</fullName>
    <label>Variant Info</label>
    <length>255</length>
    <type>Text</type>
</CustomField>